# Ufanet_autum_practice

./: .coverage  .gitignore  CHANGELOG.md  README.md  bot_main.py  config.py  example_data.sql  main.py  outbox_main.py  pyproject.toml  test.html  web_main.py
.hypothesis/constants/: 1e14969da5d57008  25f156987e7cf565  67b0a8ccf18bf5d2  6c9179a0a896b6d7  98f5d8b14f2fd3e2
.hypothesis/examples/04e6b3400353b141/: 1d58d64362719e1c  2b23bedaf3959aaf  48b2527b29856497  5d18ff835074f80a  633cb98ef4a307c6  7c0b08318182ef4f  9f70326800cacd43  a00eea26e028f100  bbd79abbb5a0d24e  c5ea17308abab530  e22749572d70a199  f99bfd67b3da9fc3
.hypothesis/examples/1d58d64362719e1c/: 737b480dc6b0933d  7a0558a82dc78982  81e8f3729d364aea
.hypothesis/examples/2b23bedaf3959aaf/: ecb50beead696741
.hypothesis/examples/48b2527b29856497/: 0efe3acd843ca847  3116341fa8785b1e  5fd258a8f1bfe40e  6ad778c58dd76a31  9818638464694121  9f2fed407641b2f9  bcde358c6663c0ee
.hypothesis/examples/5d18ff835074f80a/: 04bb2fbaf7720898  135d33840b42ac44  13c7c434a02fa40b  14ee3272ed017e6d  1925a196c1563704  1bb7dc589491cf13  1f7802d643310658  2055450fb7a831ef  29ecff756f6ea723  3ff1187afb10b0ef  45ce7d518cae8224  48cbf32fff98eb53  52175e4d32183944  6598cd9fa6098c21  6cfadce79fa37d6f  6f3311f163b49224  76e85dcc675bce4d  776edeca526c1948  (+14 more)
bot/: config.py
core/: core_types.py  database_utils.py  models.py  rmq_utils.py  types.py
core/database_utils/: __init__.py  dml.py  outbox.py  specific_select.py
outbox/: config.py
tests/: factories.py  test_admin_handlers.py  test_bot_main.py  test_database_utils.py  test_outbox_main.py
web/: config.py  dependencies.py  schemas.py  settings.py  utils.py
web/handlers/: admin_handlers.py  client_handlers.py
(+36 files in other folders)
