[project]
name = "ufanet-autum-practice"
version = "0.1.0"
description = "ufanet-autum-practice"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aio-pika>=9.5.7",
    "aiogram>=3.22.0",
    "aiosqlite>=0.21.0",
    "asyncpg>=0.30.0",
    "dotenv>=0.9.9",
    "fastapi>=0.118.0",
    "httpx>=0.28.1",
    "hypothesis>=6.140.3",
    "jinja2>=3.1.6",
    "loguru>=0.7.3",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "sqlalchemy>=2.0.43",
    "uvicorn>=0.37.0",
]
[tool.ruff]
line-length = 120
# Эквивалент --strict
select = [
  "E",  # pycodestyle errors
  "F",  # pyflakes
  "W",  # warnings
  "N",  # pep8-naming
  "UP", # pyupgrade
  "B",  # flake8-bugbear
  "A",  # flake8-builtins
  "C4", # flake8-comprehensions
  "SIM",# flake8-simplify
  "PL", # pylint-like checks
]
ignore = ["B008"]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
addopts = "--cov=. --cov=core --cov=bot --cov=web --cov=outbox --cov-report=term-missing"
filterwarnings = [
  "ignore::pytest.PytestCollectionWarning",
  "ignore::hypothesis.errors.HypothesisDeprecationWarning"
]
